Bug 1907755 - Avoid inadvertent copies when drawing a canvas to itself. r=aosmond

Even though drawing a canvas to itself tries to use ExtractSubrect to get a limited
copy where applicable, the canvas still inadvertently forces the copy-on-write snapshot
to also force a copy due to SurfaceFromElementResult holding a subversive extra reference
to the snapshot, keeping it alive when it need not be.

RecordedTextureData also holds a reference to the snapshot that needs to be cleaned up
as well when the DT is modified.

Differential Revision: https://phabricator.services.mozilla.com/D216520